==> 8evgeny/GIT/6_promwad2_step_by_step/SC2_FreeRTOS_CUBE_and_CMake/Src/__stash__/ethernetif.c <==
#include "lwip/opt.h"
#include "lwip/timeouts.h"
#include "netif/ethernet.h"
#include "netif/etharp.h"
#include "lwip/ethip6.h"
#include "ethernetif.h"
#include <string.h>
#include "cmsis_os.h"
#include "main.h"
#include "stm32h7xx_hal_conf.h"
#include "rs232_printf.h"
#include "dp83848.h"
#include <stdio.h>
#define TIME_WAITING_FOR_INPUT ( osWaitForever )
#define INTERFACE_THREAD_STACK_SIZE ( 350 )
#define IFNAME0 's'
#define IFNAME1 't'
#define ETH_DMA_TRANSMIT_TIMEOUT               ( 20U )

void HAL_ETH_MspInit(ETH_HandleTypeDef *ethHandle)
{
    GPIO_InitTypeDef GPIO_InitStruct = {0};
    if (ethHandle->Instance == ETH) {

        /* Enable Peripheral clock */
        __HAL_RCC_ETH1MAC_CLK_ENABLE();
        __HAL_RCC_ETH1TX_CLK_ENABLE();
        __HAL_RCC_ETH1RX_CLK_ENABLE();

        __HAL_RCC_GPIOC_CLK_ENABLE();
        __HAL_RCC_GPIOA_CLK_ENABLE();
        __HAL_RCC_GPIOH_CLK_ENABLE();
        __HAL_RCC_GPIOB_CLK_ENABLE();
        /**ETH GPIO Configuration
        PC1     ------> ETH_MDC
        PC2     ------> ETH_TXD2
        PC3     ------> ETH_TX_CLK
        PA0/WKUP     ------> ETH_CRS
        PA1     ------> ETH_RX_CLK
        PA2     ------> ETH_MDIO
        PH3     ------> ETH_COL
        PA7     ------> ETH_RX_DV
        PC4     ------> ETH_RXD0
        PC5     ------> ETH_RXD1
        PB0     ------> ETH_RXD2
        PB1     ------> ETH_RXD3
        PB10     ------> ETH_RX_ER
        PB11     ------> ETH_TX_EN
        PB12     ------> ETH_TXD0
        PB13     ------> ETH_TXD1
        PB8     ------> ETH_TXD3
        */
        GPIO_InitStruct.Pin = GPIO_PIN_1 | GPIO_PIN_2 | GPIO_PIN_3 | GPIO_PIN_4
                              | GPIO_PIN_5;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
        HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_2 | GPIO_PIN_7;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_3;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
        HAL_GPIO_Init(GPIOH, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_10 | GPIO_PIN_11
                              | GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_8;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF11_ETH;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        /* Peripheral interrupt init */
        HAL_NVIC_SetPriority(ETH_IRQn, 1, 0);
        HAL_NVIC_EnableIRQ(ETH_IRQn);
        HAL_NVIC_SetPriority(ETH_WKUP_IRQn, 1, 0);
        HAL_NVIC_EnableIRQ(ETH_WKUP_IRQn);


    }
}

void HAL_ETH_MspDeInit(ETH_HandleTypeDef *ethHandle)
{
    if (ethHandle->Instance == ETH) {
        /* Peripheral clock disable */
        __HAL_RCC_ETH1MAC_CLK_DISABLE();
        __HAL_RCC_ETH1TX_CLK_DISABLE();
        __HAL_RCC_ETH1RX_CLK_DISABLE();

        /**ETH GPIO Configuration
        PC1     ------> ETH_MDC
        PC2     ------> ETH_TXD2
        PC3     ------> ETH_TX_CLK
        PA0/WKUP     ------> ETH_CRS
        PA1     ------> ETH_RX_CLK
        PA2     ------> ETH_MDIO
        PH3     ------> ETH_COL
        PA7     ------> ETH_RX_DV
        PC4     ------> ETH_RXD0
        PC5     ------> ETH_RXD1
        PB0     ------> ETH_RXD2
        PB1     ------> ETH_RXD3
        PB10     ------> ETH_RX_ER
        PB11     ------> ETH_TX_EN
        PB12     ------> ETH_TXD0
        PB13     ------> ETH_TXD1
        PB8     ------> ETH_TXD3
        */
        HAL_GPIO_DeInit(GPIOC, GPIO_PIN_1 | GPIO_PIN_2 | GPIO_PIN_3 | GPIO_PIN_4
                        | GPIO_PIN_5);

        HAL_GPIO_DeInit(GPIOA, GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_2 | GPIO_PIN_7);

        HAL_GPIO_DeInit(GPIOH, GPIO_PIN_3);

        HAL_GPIO_DeInit(GPIOB, GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_10 | GPIO_PIN_11
                        | GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_8);

        /* Peripheral interrupt Deinit*/
        HAL_NVIC_DisableIRQ(ETH_IRQn);

        HAL_NVIC_DisableIRQ(ETH_WKUP_IRQn);
    }
}

static void low_level_init(struct netif *netif)
{
RS232Puts("low_level_init start\n") ;

    HAL_StatusTypeDef hal_eth_init_status = HAL_OK;
    uint32_t idx = 0;
    /* Start ETH HAL Init */

    uint8_t MACAddr[6] ;
    heth.Instance = ETH;
    MACAddr[0] = 0x40;
    MACAddr[1] = 0x8d;
    MACAddr[2] = 0x5c;
    MACAddr[3] = 0xba;
    MACAddr[4] = 0xf6;
    MACAddr[5] = 0x22;
    heth.Init.MACAddr = &MACAddr[0];
    heth.Init.MediaInterface = HAL_ETH_MII_MODE;
    heth.Init.TxDesc = DMATxDscrTab;
    heth.Init.RxDesc = DMARxDscrTab;
    heth.Init.RxBuffLen = 1524;

    /* USER CODE BEGIN MACADDRESS */
//    sPDOSettings *sset = sysset_get_settings();
//    MACAddr[3] = sset->network.ip[1];
//    MACAddr[4] = sset->network.ip[2];
//    MACAddr[5] = sset->network.ip[3];
    /* USER CODE END MACADDRESS */

    hal_eth_init_status = HAL_ETH_Init(&heth);

    memset(&TxConfig, 0 , sizeof(ETH_TxPacketConfig));
    TxConfig.Attributes = ETH_TX_PACKETS_FEATURES_CSUM | ETH_TX_PACKETS_FEATURES_CRCPAD;
    TxConfig.ChecksumCtrl = ETH_CHECKSUM_IPHDR_PAYLOAD_INSERT_PHDR_CALC;
    TxConfig.CRCPadCtrl = ETH_CRC_PAD_INSERT;

    /* End ETH HAL Init */

    /* Initialize the RX POOL */
    LWIP_MEMPOOL_INIT(RX_POOL);


    if (hal_eth_init_status == HAL_OK) {
        /* Set netif link flag */
        netif->flags |= NETIF_FLAG_LINK_UP;
    }


RS232Puts("$$$$ NEED CHANGE TX RX DESCRIPTORS $$$$\n") ;

//    /* Initialize Tx Descriptors list: Chain Mode */
//    HAL_ETH_DMATxDescListInit(&heth, DMATxDscrTab, &Tx_Buff[0][0], ETH_TXBUFNB);

//    /* Initialize Rx Descriptors list: Chain Mode  */
//    HAL_ETH_DMARxDescListInit(&heth, DMARxDscrTab, &Rx_Buff[0][0], ETH_RXBUFNB);




#if LWIP_ARP || LWIP_ETHERNET

    /* set MAC hardware address length */
    netif->hwaddr_len = ETH_HWADDR_LEN;

    /* set MAC hardware address */
    netif->hwaddr[0] =  heth.Init.MACAddr[0];
    netif->hwaddr[1] =  heth.Init.MACAddr[1];
    netif->hwaddr[2] =  heth.Init.MACAddr[2];
    netif->hwaddr[3] =  heth.Init.MACAddr[3];
    netif->hwaddr[4] =  heth.Init.MACAddr[4];
    netif->hwaddr[5] =  heth.Init.MACAddr[5];

    /* maximum transfer unit */
    netif->mtu = ETH_MAX_PAYLOAD;

    /* Accept broadcast address and ARP traffic */
    /* don't set NETIF_FLAG_ETHARP if this device is not an ethernet one */
#if LWIP_ARP
    netif->flags |= NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP;
#else
    netif->flags |= NETIF_FLAG_BROADCAST;
#endif /* LWIP_ARP */

    for(idx = 0; idx < ETH_RX_DESC_CNT; idx ++)
    {
      HAL_ETH_DescAssignMemory(&heth, idx, Rx_Buff[idx], NULL);
    }

    /* Set PHY IO functions */
    DP83848_RegisterBusIO(&DP83848, &DP83848_IOCtx);

    /* Initialize the DP83848 ETH PHY */
    DP83848_Init(&DP83848);

    if (hal_eth_init_status == HAL_OK)
    {
    /* Get link state */
    ethernet_link_check_state(netif);
    }
    else
    {
      Error_Handler();
    }

RS232Puts("$$$$ ethernetif.c  353 $$$$\n") ;


    netif->flags |= NETIF_FLAG_IGMP;

    /* create a binary semaphore used for informing ethernetif of frame reception */
    osSemaphoreDef(SEM);
    s_xSemaphore = osSemaphoreCreate(osSemaphore(SEM), 1);

    /* create the task that handles the ETH_MAC */
    osThreadDef(EthIf, ethernetif_input, osPriorityRealtime, 0, INTERFACE_THREAD_STACK_SIZE);
    osThreadCreate(osThread(EthIf), netif);

    /* Enable MAC and DMA transmission and reception */
    HAL_ETH_Start(&heth);

    /**** Configure PHY to generate an interrupt when Eth Link state changes ****/
    /* Read Register Configuration */
//    HAL_ETH_ReadPHYRegister(&heth, PHY_MICR, &regvalue);

//    regvalue |= (PHY_MICR_INT_EN | PHY_MICR_INT_OE);

//    /* Enable Interrupts */
//    HAL_ETH_WritePHYRegister(&heth, PHY_MICR, regvalue);

//    /* Read Register Configuration */
//    HAL_ETH_ReadPHYRegister(&heth, PHY_MISR, &regvalue);

//    regvalue |= PHY_MISR_LINK_INT_EN;

    /* Enable Interrupt on change of link status */
//    HAL_ETH_WritePHYRegister(&heth, PHY_MISR, regvalue);

#endif /* LWIP_ARP || LWIP_ETHERNET */

}

static err_t low_level_output(struct netif *netif, struct pbuf *p)
{
    uint32_t i=0;
    struct pbuf *q;
    err_t errval = ERR_OK;
    ETH_BufferTypeDef Txbuffer[ETH_TX_DESC_CNT];

    memset(Txbuffer, 0 , ETH_TX_DESC_CNT*sizeof(ETH_BufferTypeDef));

    for(q = p; q != NULL; q = q->next)
    {
      if(i >= ETH_TX_DESC_CNT)
        return ERR_IF;

      Txbuffer[i].buffer = q->payload;
      Txbuffer[i].len = q->len;

      if(i>0)
      {
        Txbuffer[i-1].next = &Txbuffer[i];
      }

      if(q->next == NULL)
      {
        Txbuffer[i].next = NULL;
      }

      i++;
    }

    TxConfig.Length =  p->tot_len;
    TxConfig.TxBuffer = Txbuffer;

    HAL_ETH_Transmit(&heth, &TxConfig, ETH_DMA_TRANSMIT_TIMEOUT);

    return errval;
}

static struct pbuf *low_level_input(struct netif *netif)
{
    struct pbuf *p = NULL;
    ETH_BufferTypeDef RxBuff[ETH_RX_DESC_CNT];
    uint32_t framelength = 0, i = 0;
    struct pbuf_custom* custom_pbuf;

    memset(RxBuff, 0 , ETH_RX_DESC_CNT*sizeof(ETH_BufferTypeDef));

    for(i = 0; i < ETH_RX_DESC_CNT -1; i++)
    {
      RxBuff[i].next=&RxBuff[i+1];
    }

    if (HAL_ETH_IsRxDataAvailable(&heth))
    {
      HAL_ETH_GetRxDataBuffer(&heth, RxBuff);
      HAL_ETH_GetRxDataLength(&heth, &framelength);

      /* Build Rx descriptor to be ready for next data reception */
      HAL_ETH_BuildRxDescriptors(&heth);

  #if !defined(DUAL_CORE) || defined(CORE_CM7)
      /* Invalidate data cache for ETH Rx Buffers */
      SCB_InvalidateDCache_by_Addr((uint32_t *)RxBuff->buffer, framelength);
  #endif

      custom_pbuf  = (struct pbuf_custom*)LWIP_MEMPOOL_ALLOC(RX_POOL);
      custom_pbuf->custom_free_function = pbuf_free_custom;

      p = pbuf_alloced_custom(PBUF_RAW, framelength, PBUF_REF, custom_pbuf, RxBuff->buffer, framelength);

      return p;
    }
    else
    {
      return NULL;
    }
}

void ethernetif_set_link(void const *argument)
{
//    uint32_t regvalue = 0;
    struct link_str *link_arg = (struct link_str *)argument;

HAL_Delay(500);
RS232Puts("****  ethernetif_set_link  start  ****\n");

    for (;;)
    {

//        if (osSemaphoreWait(link_arg->semaphore, osWaitForever) == osOK)
//        {


            ethernet_link_check_state(link_arg->netif);



//            /* Read PHY_MISR*/
//            HAL_ETH_ReadPHYRegister(&heth, PHY_MISR, &regvalue);

//            /* Check whether the link interrupt has occurred or not */
//            if ((regvalue & PHY_LINK_INTERRUPT) != (uint16_t)RESET) {
//                /* Read PHY_SR*/
//                HAL_ETH_ReadPHYRegister(&heth, PHY_SR, &regvalue);

//                /* Check whether the link is up or down*/
//                if ((regvalue & PHY_LINK_STATUS) != (uint16_t)RESET) {
//                    netif_set_link_up(link_arg->netif);
//                } else {
//                    netif_set_link_down(link_arg->netif);
//                }
//            }

//        }
    }

}
